# multi_gpu_orchestration

./: .gitignore  README.md  pyproject.toml
.portfolio/publish/data/: tutorial_metrics.tsv
configs/: baseline.toml  throughput.toml
docs/: tutorial.md  visualizations.md
scripts/: profile_ncu.sh  profile_nsys.sh  train_cpu.sh  train_multi_gpu.sh  train_single_gpu.sh  visualize_metrics.py
src/world_model_lab/: __init__.py  config.py  data.py  distributed.py  model.py  profiling.py  train.py
